--- 3.0.8 2007/06/25

Fixed bug #1208: SSL appears to be broken in ZOOM.

Fixed bug #1206: Libxml2 include path weirdness. 

Added oid_name_to_dotstring.

Allow elementSetName to be specified for ZOOM C record update.

Allow waitAction to be specified for ZOOM C based for Extended Services.

Fixed NULL ptr reference bug in yaz-ztest - caused by omitted record
syntax OID. Bug introduced in YAZ 3 series.

Updated WIN32 build to include Libxml2 2.6.28 / Libxslt 1.1.19.

--- 3.0.6 2007/06/06

Fixed bug #1157: yaz-client does not read .yazclientrc from current
directory. yaz-client now reads commands from file given by option -f
if specified; then tries to read .yazclientrc in current directory.
Failing that, it reads .yazclientrc from user's home directory.

Added support for correlationInfo Note and ID for Record Update via
ZOOM C.

Added yaz-client command querycharset which specifies character set for
query terms for Z39.50 RPN queries and Z39.50 Scan Requests
(termListAndStartPoint).

Charset ISO5428:1984 is an alias for ISO5428-1984.

Implemented a way to perform scan in a result set using Z39.50. This
is achieved by attaching the result set name in the characterInfo
(type InternationalString) of OtherInformation in the Scan Request PDU.
The result set is identified in the otherinformation by the new OID:
 USERINFO, Z3950_PREFIX.10.1000.81.4, "Scan-Set
This allows for scan in result set and faceted search . Zebra did some
of this in the APT term using attribute type 8 and value being result
set. Using the OtherInformation approach for this is cleaner and easier
to work with in proxies and the like. This facility can be used in
yaz-client using new command setscan which takes a result set as first
argument, start position (APT) as second.

Changed decoding of SRU XML packed records to deal with servers that
have recordData with XML data with multiple root nodes. Also make
comparison for recordPacking case insensitive. Again, one server